Question page file renaming

--- a/app/pages/questions/questions.html
+++ b/app/pages/questions/questions.html
@@ -2,7 +2,7 @@
   <button menuToggle>
     <icon menu></icon>
   </button>
-  <ion-title>Lists</ion-title>
+  <ion-title>Questions</ion-title>
 </ion-navbar>
 
 <ion-content>
