adds modal functionality, adds modal html file

--- a/app/pages/questions/questions.html
+++ b/app/pages/questions/questions.html
@@ -30,5 +30,5 @@
 
    </ion-list>
 
-  <button fab fab-right><icon add></icon></button>
+  <button fab fab-right (click)="openModal('openModal')"><icon add></icon></button>
 </ion-content>
