--- a/app/pages/questions/questions.html
+++ b/app/pages/questions/questions.html
@@ -30,5 +30,6 @@
 
    </ion-list>
 
-  <button fab fab-right (click)="openModal('openModal')"><icon add></icon></button>
+   <!-- Opens modal, the openModal is a function -->
+  <button fab fab-right (click)="openModal()"><icon add></icon></button>
 </ion-content>
