--- a/app/pages/team/team.html
+++ b/app/pages/team/team.html
@@ -22,7 +22,7 @@
     </ion-segment>
   </div>
 
-  <div [ngSwitch]="team">
+  <div [ngSwitch]="teamx">
     <ion-list *ngSwitchWhen="'grid'">
       <ion-row>
         <ion-col *ngFor="#member of team">
