--- a/app/pages/grid/signup.html
+++ b/app/pages/grid/signup.html
@@ -30,6 +30,6 @@
     <button full [disabled]="disabled">Sign Up</button>
   </ion-list>
 </ion-content>
-<ion-footer-bar class="footer toolbar-title" (click)="gotoLogin()">
+<ion-footer class="footer toolbar-title" (click)="gotoLogin()">
   <h1 class="title">Already have an account ?</h1>
-</ion-footer-bar>
+</ion-footer>
