--- a/app/pages/grid/reset.html
+++ b/app/pages/grid/reset.html
@@ -1,6 +1,6 @@
-<ion-header-bar class="header toolbar-title">
+<ion-navbar *navbar class="header toolbar-title">
   <h1 class="title">Password Reset</h1>
-</ion-header-bar>
+</ion-navbar>
 
 <ion-content class="grid">
   <ion-list>
