1) Use parse javaScript sdk for authentication. 2) Add core service to call Parse API. 3) Change <ion-icon> back to <icon>. 4) Remove ^ from the version of ionic-framework.
Signed-off-by: Connie Leung <cleung334@gmail.com>

--- a/app/pages/grid/grid.html
+++ b/app/pages/grid/grid.html
@@ -1,6 +1,6 @@
 <ion-navbar *navbar>
   <button menuToggle>
-    <ion-icon name="menu"></ion-icon>
+    <icon name="menu"></icon>
   </button>
   <ion-title>Grid Icons</ion-title>
 </ion-navbar>
@@ -11,19 +11,19 @@
 
     <ion-col>
       <a button light>
-        <ion-icon name="home"></ion-icon>
+        <icon name="home"></icon>
       </a>
     </ion-col>
 
     <ion-col>
       <a button light>
-        <ion-icon name="person"></ion-icon>
+        <icon name="person"></icon>
       </a>
     </ion-col>
 
     <ion-col>
       <a button light>
-        <ion-icon name="settings"></ion-icon>
+        <icon name="settings"></icon>
       </a>
     </ion-col>
 
@@ -32,35 +32,17 @@
   <ion-row>
     <ion-col>
       <a button light>
-        <ion-icon name="globe"></ion-icon>
+        <icon name="globe"></icon>
       </a>
     </ion-col>
     <ion-col>
       <a button light>
-        <ion-icon name="lock"></ion-icon>
+        <icon name="lock"></icon>
       </a>
     </ion-col>
     <ion-col>
       <a button light>
-        <ion-icon name="mail"></ion-icon>
-      </a>
-    </ion-col>
-  </ion-row>
-
-  <ion-row>
-    <ion-col>
-      <a button light>
-        <ion-icon name="options"></ion-icon>
-      </a>
-    </ion-col>
-    <ion-col>
-      <a button light>
-        <ion-icon name="camera"></ion-icon>
-      </a>
-    </ion-col>
-    <ion-col>
-      <a button light>
-        <ion-icon name="calculator"></ion-icon>
+        <icon name="mail"></icon>
       </a>
     </ion-col>
   </ion-row>
@@ -68,17 +50,35 @@
   <ion-row>
     <ion-col>
       <a button light>
-        <ion-icon name="finger-print"></ion-icon>
+        <icon name="options"></icon>
       </a>
     </ion-col>
     <ion-col>
       <a button light>
-        <ion-icon name="flash"></ion-icon>
+        <icon name="camera"></icon>
       </a>
     </ion-col>
     <ion-col>
       <a button light>
-        <ion-icon name="beer"></ion-icon>
+        <icon name="calculator"></icon>
+      </a>
+    </ion-col>
+  </ion-row>
+
+  <ion-row>
+    <ion-col>
+      <a button light>
+        <icon name="finger-print"></icon>
+      </a>
+    </ion-col>
+    <ion-col>
+      <a button light>
+        <icon name="flash"></icon>
+      </a>
+    </ion-col>
+    <ion-col>
+      <a button light>
+        <icon name="beer"></icon>
       </a>
     </ion-col>
   </ion-row>
