--- a/app/pages/grid/signup.html
+++ b/app/pages/grid/signup.html
@@ -1,6 +1,6 @@
 <ion-navbar *navbar>
   <button menuToggle>
-    <ion-icon name="menu"></ion-icon>
+    <icon name="menu"></icon>
   </button>
   <ion-title>Sign Up</ion-title>
 </ion-navbar>
