--- a/app/pages/team/team.html
+++ b/app/pages/team/team.html
@@ -1,7 +1,7 @@
 
 <ion-navbar *navbar>
   <button menuToggle>
-    <ion-icon name="menu"></ion-icon>
+    <icon name="menu"></icon>
   </button>
   <ion-title>Team</ion-title>
 </ion-navbar>
